--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     margin: 80px auto;
     background-color: whitesmoke;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid grey;
     padding: 10px;
     box-shadow: 5px 5px 5px grey;
 }
