--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     margin: 80px auto;
     background-color: whitesmoke;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid lightgrey;
     padding: 10px;
     box-shadow: 5px 5px 5px grey;
 }
@@ -18,7 +18,7 @@
     width: 150px;
     color: whitesmoke;
     font-weight: bolder;
-    margin: 0 25px 20px 25px;
+    margin: 10px 25px 20px 25px;
     box-shadow: 3px 3px 3px grey;
 }
 .btn:hover {
